# uv-python-project-template

./: .pre-commit-config.yaml  README.md  pyproject.toml  setup.sh
.github/actions/setup-python-env/: action.yaml
.github/configs/: dependency-review-config.yaml
.github/workflows/: code-style.yaml  dependency-review.yaml  run-tests.yaml
tests/: test_blueprint.py
